HEAD:

	* Fixed the ROM scanner function that didn't filter out partial ROMs which aren't yet
	  supported. Related to (#44).
	* Added support for partial bitwise ROM dumps (#56). Now, the synth can operate with
	  a pair of control ROM files and a pair of PCM ROM files, which are merged when needed.
	* Reworked ROMSelectionDialog to permit selection of multiple ROM files of each type
	  and to support known machine configurations to simplify ROM selection.

2021-01-17:

	1.8.0 released.

	* Added mode "Hide to tray on close". When enabled, the application does not exit when the user closes the main window.
	  To exit the application, the corresponding menu items can be used in menu "Tools" and the tray icon menu.
	* Added possibility to select output device on macOS with the CoreAudio driver.
	* Reworked internal MIDI message routing and buffering in case multiple MIDI streams are attached to a single (pinned)
	  synth, so that the resulting stream supplied to the synth contains MIDI messages ordered by their timestamp frame-wise.
	  This improves the timing accuracy to the best possible extent.
	* Added support for integration with the JACK audio kit. Now the application may serve as one or more JACK clients
	  providing either a single MIDI input port, a pair of output audio ports, or a combined synth client with the input
	  and output ports. In the latter case, MIDI processing and audio rendering are performed synchronously without any
	  explicit additional latency.
	* Improved the MIDI recording function. It now allows recording from several MIDI sources simultaneously. When more
	  than one MIDI session is attached to a Synth being recording MIDI, a standard MIDI file type 1 is created subsequently
	  that contains recorded MIDI events of each session in a separate MIDI track, which may be helpful while editing
	  the MIDI file further. Additionally, improved timing of the MIDI recorder wrt. memory allocations in the MIDI thread